k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
  namespace: my-tnttfc
spec:
  replicas: 0
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
        - name: api-app
          image: hashicorp/http-echo:1.0
          args:
            - "-text=Hello from API Application"
          ports:
            - containerPort: 5678
