k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: python-app
  namespace: my-tnttfc

spec:
  replicas: 1

  selector:
    matchLabels:
      app: python-app

  template:
    metadata:
      labels:
        app: python-app

    spec:
      containers:
        - name: python-app
          image: 260369602336.dkr.ecr.ap-south-1.amazonaws.com/python-eks-demo:1.0

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /about
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /about
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
