k8s/ebs-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ebs-test-pod
  namespace: my-tnttfc
spec:
  containers:
    - name: ebs-test
      image: ubuntu:24.04
      command: ["/bin/bash"]
      args:
        - "-c"
        - "sleep 3600"
      volumeMounts:
        - name: persistent-storage
          mountPath: /data

  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: python-pvc
