k8s/efs-test-pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: efs-test
  namespace: my-tnttfc
spec:
  replicas: 0
  selector:
    matchLabels:
      app: efs-test
  template:
    metadata:
      labels:
        app: efs-test
    spec:
      containers:
        - name: app
          image: ubuntu:24.04
          command:
            - /bin/bash
            - -c
            - |
              echo "Starting container..."
              sleep 3600
          volumeMounts:
            - name: shared-storage
              mountPath: /shared

      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: efs-pvc
