k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: my-tnttfc
spec:
  type: ClusterIP
  selector:
    app: api-app
  ports:
    - port: 80
      targetPort: 5678
