k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: python-service
  namespace: my-tnttfc

spec:
  type: ClusterIP

  selector:
    app: python-app

  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
